--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.5",
+    "chart.js": "^4.4.2",
+    "faker": "^6.6.6",
     "next": "14.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
